# normalizer-docs

./: .gitignore  README.md  flake.nix  general-notes.md  meetings-with-mentor.md  mentor-meetings.md  pyproject.toml  utility-tree.md
analytics_tools/: commits.py
architecture/: filesystem.dsl  workspace.dsl
data/: commits.csv
nix/: structurizr-lite.nix
