[tool.poetry]
name = "analytics_tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pandas-stubs = "^2.2.1.240316"
numpy = "^1.26.4"
black = "^24.4.2"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
